--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que está por vir?</title>
 
-    <link rel="icon" href="./img/&.png">
+    <link rel="icon" href="./img/&.png"></link>
 
     <meta name="description content="Site de lançamento estrategico da marca G&TO">
 
