--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O que está por vir?</title>
 
-    <link rel="icon" href="./img/&.png"></link>
+    <link rel="icon" href="./img/&.png">
 
     <meta name="description content="Site de lançamento estrategico da marca G&TO">
 
-    <LINK rel="stylesheet" href="style.css"></LINK>
+    <LINK rel="stylesheet" href="style.css">
 
     <link ref="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <body>
     <HEAder></HEAder>
