--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta name="description content="Site de lançamento estrategico da marca G&TO">
 
-    <LINK rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link ref="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
